# multimodal-knowledge-base-question-answering

./: .env.example  .gitignore  README.md  README.zh.md  TUTORIAL.md
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: models.py  session.py
apps/api/app/routers/: auth.py  documents.py  qa.py
apps/api/app/schemas/: auth.py  documents.py  qa.py
apps/api/app/services/: chunking_service.py  document_ingestion_service.py  document_processor.py  llm_service.py  ocr_service.py  rag_service.py  storage_service.py  vector_service.py
apps/api/sample_data/: sample.txt
apps/api/tests/: test_auth.py  test_documents_qa.py  test_llm_rag.py  test_processing_chunking.py  test_storage_service.py  test_vector_service.py
apps/web/: index.html  package-lock.json  package.json
apps/web/src/: App.tsx  main.tsx  styles.css
apps/web/src/components/: ChatWindow.tsx  CitationList.tsx  DocumentTable.tsx  GreetingModal.tsx  HelpModal.tsx  Logo.tsx  MarkdownMessage.tsx  (+2 more)
docs/: api-contract.md  architecture.md  final_report.docx  final_report.html  final_report_2026-05-27_1755_en.docx  final_report_2026-05-27_1755_en.md  final_report_2026-05-27_1755_zh.docx  final_report_2026-05-27_1755_zh.md  final_report_2026-05-27_1822_en.docx  final_report_2026-05-27_1822_zh.docx  final_report_2026-05-27_1838_en.md  final_report_2026-05-27_1838_zh.docx  final_report_2026-05-27_1838_zh.md  final_report_print.css  final_report_print.html  poc_feature_audit.md  submission_guide.md
scripts/: test-all.ps1
tools/: test_llm_chat.py
(+5 files in other folders)
