[project]
name = "multimodal-kb-qa-api"
version = "0.1.0"
description = "Local-first multimodal personal knowledge base QA API"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlmodel>=0.0.21",
  "pydantic-settings>=2.3.0",
  "email-validator>=2.2.0",
  "python-multipart>=0.0.9",
  "httpx>=0.27.0",
  "pymupdf>=1.24.0",
  "rank-bm25>=0.2.2",
  "tencentcloud-sdk-python>=3.0.1300",
]

[project.optional-dependencies]
ml = [
  "sentence-transformers>=3.0.0",
  "faiss-cpu>=1.8.0",
  "numpy>=1.26.0",
]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
